Fixing bug when sending last_document argument to cupsStartDestDocument

The SendDocument function in cups_printer which calls
cupsStartDestDocument in CUPS had the logic backwards for passing the
"last_document" argument. This was causing CUPS to behave strangely and
mishandle printing multiple copies of documents for printers which did
not support the copies IPP attribute.

Bug: chromium:897275
Test: Tested manually using elm device and virtual USB printer
Change-Id: I313965bfe4c281adf071ef8c14a022df4e0c2c12
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1695693
Auto-Submit: David Valleau <valleau@chromium.org>
Reviewed-by: Sean Kau <skau@chromium.org>
Commit-Queue: David Valleau <valleau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#676090}

Former-commit-id: e174b54b2c7ffc907b75d2ce0b875726632553a7